--- a/f2 formative/style.css
+++ b/f2 formative/style.css
@@ -1,37 +1,35 @@
 body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-    line-height: 1.8;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin : 0px 0px 0px 0px; 
 }
 
-input, textarea{
-    background-image: linear-gradient(rgb(238, 238, 238), rgb(255, 255, 255));
-    border-color: rgb(209, 209, 209);
-    border-radius: 5px;
-    border-width: 1px;
-    border-style:solid;
-    height: 25px;
-    width: 500px;
-    margin-bottom: 10px;
+.topcontainer{
+    display: flex;
+    font-size: 20px;
 }
 
-input[type="number"]{
-    width: 250px;
+.headerinfo{
+    flex-grow: 4;
+    padding : 40px 40px 40px 40px;
+    background-color: rgb(226, 243, 238);
+    line-height: 0.5;
 }
 
-input[type="submit"]{
-    width: 80px;
-    height: 30px;
-    background-image: linear-gradient(rgb(52, 67, 199), #4d6eb6);
-    color: aliceblue;
+.maincontent{
+    margin : 40px 40px 40px 40px;
+    font-size: 15px;
 }
 
-textarea{
-    height: 70px;
-    width: 650px;
+.img{
+    display: flex;
+
 }
 
-/* From Uiverse.io by alexroumi */ 
+image{
+    padding: 0% 0% 0% 0%;
+    margin: 0% 0% 0% 0%;
+}
+
 button {
  padding: 15px 25px;
  border: unset;
@@ -47,7 +45,7 @@ button {
  transition: all 250ms;
  overflow: hidden;
  position:absolute;
-  bottom:0;
+  bottom:1;
 }
 
 button::before {
