I forgot what I did lowkey, just focus on doing the footer tomorrow

--- a/project/indexstyle.css
+++ b/project/indexstyle.css
@@ -11,7 +11,7 @@ header.container {
 }
 
 header {
-        background-color: white;
+        background-color: rgb(255, 255, 255);
     padding: 15px 30px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     display: flex;
@@ -35,25 +35,28 @@ nav a {
     color: #333;
     font-weight: 500;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 25px;
     letter-spacing: 0.5px;
 } 
 
 .header-buttons {
     display: flex;
     gap: 15px;
-    margin-left: auto;
+    margin-left: 800px;
 }
 
 .header-btn {
     padding: 8px 20px;
-    border-radius: 4px;
+    border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
     border: none;
+    margin: auto;
     
 }
 
 .logo img {
-    height: 50px;
+    height: 60px;   
+    margin-left: 30px;
 }
+
