--- a/project/indexstyle.css
+++ b/project/indexstyle.css
@@ -3,7 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+  
+
 }
+
 
 header.container {
     padding-left: 0;
@@ -68,10 +71,51 @@ html, body {
   }
   
   .content-wrapper {
-    min-height: calc(100vh - 150px); /* Adjust 150px to your footer's height */
+    min-height: calc(100vh - 150px); 
   }
-  
   footer {
     width: 100%;
-    /* Optional: add more styling as needed */
+   
   }
+
+ 
+
+.design-square {
+    width: 3000px;         
+    height: 400px;        
+    background: #FCB045;
+background: linear-gradient(90deg, rgba(252, 176, 69, 1) 17%, rgba(255, 135, 135, 1) 38%, rgba(116, 164, 227, 1) 64%, rgba(37, 106, 196, 1) 85%);
+    margin: 20px auto;         
+    display: flex;             
+    align-items: center;       
+    justify-content: center;  
+}
+
+.doggy {
+    position: absolute;
+      top: 150px;
+      left: 1450px;
+      width: 600px;
+      height: auto;
+}
+
+.InformationZacian {
+    position: absolute;
+    top: 150px;
+    left: 800px;
+    width: 600px;
+    height: auto;
+    font-weight: bold;
+}
+
+.THESENUTS {
+    position: absolute;
+    top: 320px;
+    left: 800px;
+    font-size: 24px;
+    margin-bottom: 30px;
+    line-height: 1.3; 
+    letter-spacing: 0.01em;   
+    width: 600px;
+    
+}
