--- a/project/indexstyle.css
+++ b/project/indexstyle.css
@@ -23,23 +23,23 @@ body {
   
   .items-overlay {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 300vw;
-    min-width: 1000px;
-    max-width: 1000px;
+    width: 200vw;
+    min-width: 800px;
+    max-width: 800px;
     z-index: 2;
   }
   
   .poke-ball-overlay {
     position: absolute;
-    top: 70%;
-    left: 80%;
+    top: 80%;
+    left: 70%;
     transform: translate(-50%, -50%);
-    width: 400vw;
+    width: 100vw;
     min-width: 100px;
-    max-width: 300px;
+    max-width: 200px;
     z-index: 2;
   }
   
@@ -52,6 +52,7 @@ body {
     min-width: 60px;
     max-width: 300px;
     z-index: 2;
+    filter: drop-shadow(0 0 80px rgba(0,0,0,0.9));
   }
   
   .overlay-text {
@@ -109,6 +110,16 @@ body {
     .overlay-text h2 {
       font-size: 0.8rem;
     }
+  }
+
+  .image1 {
+  width: 100%;
+  height: auto;
+  max-height: 1000px;
+ mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 80%, transparent 100%);
+  mask-image: linear-gradient(to top, rgb(0, 0, 0) 80%, transparent 100%);
+ display: block;
+ filter: blur(6px);
   }
 
  
