--- a/project/indexstyle.css
+++ b/project/indexstyle.css
@@ -122,6 +122,40 @@ body {
  filter: blur(6px);
   }
 
- 
 
+  .sectiondownload {
+   background: #2A7B9B;
+background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
+ max-height: 1000px;
+ height: auto;
+ padding-top: 4rem;
+ padding-bottom: 10rem;
+ min-height: 600px;
+  }
+ 
+.pokemonlogo {
+  width: 30%;
+  display: block;
+  margin: 0 auto;
+  margin-top: -200px;
+
+
+}
+
+.texth1 {
+     font-size: 1.1rem;
+     color: white;
+     text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+     text-align: center;
+ 
+}
+
+.texth2 {
+     font-size: 1.1rem;
+     padding-top: 4rem;
+     color: white;
+     text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+     text-align: center;
+ 
+}
 
